src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D408_sections.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    SectionUnderlineAfterName: Returns
  location:
    row: 85
    column: 4
  end_location:
    row: 92
    column: 7
  fix:
    content: ""
    location:
      row: 88
      column: 0
    end_location:
      row: 89
      column: 0
  parent: ~

