src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D409_sections.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    SectionUnderlineMatchesSectionLength: Returns
  location:
    row: 99
    column: 4
  end_location:
    row: 105
    column: 7
  fix:
    content: "    -------\n"
    location:
      row: 102
      column: 0
    end_location:
      row: 103
      column: 0
  parent: ~
- kind:
    SectionUnderlineMatchesSectionLength: Returns
  location:
    row: 207
    column: 4
  end_location:
    row: 221
    column: 7
  fix:
    content: "    -------\n"
    location:
      row: 216
      column: 0
    end_location:
      row: 217
      column: 0
  parent: ~

