src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D411_sections.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    BlankLineBeforeSection: Yields
  location:
    row: 67
    column: 4
  end_location:
    row: 78
    column: 7
  fix:
    content: "\n"
    location:
      row: 71
      column: 0
    end_location:
      row: 71
      column: 0
  parent: ~
- kind:
    BlankLineBeforeSection: Returns
  location:
    row: 122
    column: 4
  end_location:
    row: 129
    column: 7
  fix:
    content: "\n"
    location:
      row: 125
      column: 0
    end_location:
      row: 125
      column: 0
  parent: ~
- kind:
    BlankLineBeforeSection: Raises
  location:
    row: 207
    column: 4
  end_location:
    row: 221
    column: 7
  fix:
    content: "\n"
    location:
      row: 218
      column: 0
    end_location:
      row: 218
      column: 0
  parent: ~

