src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D414_sections.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    NonEmptySection: Returns
  location:
    row: 54
    column: 4
  end_location:
    row: 58
    column: 7
  fix: ~
  parent: ~
- kind:
    NonEmptySection: Returns
  location:
    row: 67
    column: 4
  end_location:
    row: 78
    column: 7
  fix: ~
  parent: ~
- kind:
    NonEmptySection: Yields
  location:
    row: 67
    column: 4
  end_location:
    row: 78
    column: 7
  fix: ~
  parent: ~
- kind:
    NonEmptySection: Returns
  location:
    row: 161
    column: 4
  end_location:
    row: 165
    column: 7
  fix: ~
  parent: ~
- kind:
    NonEmptySection: Returns
  location:
    row: 252
    column: 4
  end_location:
    row: 262
    column: 7
  fix: ~
  parent: ~

